--- a/css/screen.css
+++ b/css/screen.css
@@ -61,3 +61,31 @@ header {
     background: #cf0004 url(../images/banner_1200.jpg) no-repeat center bottom;
     position: relative;
 }
+
+header a.logo {
+    position: absolute; /* abs related to relative header elm */
+    display: block;
+    width: 160px; /* match graphic size */
+    height: 66px;
+    background: url(../images/logo.svg) no-repeat 0 0;
+    background-size: contain; /* Fit height & width */
+    top: 15px; /* rel to header */
+    left: 20px;
+}
+
+header a.logo span {
+    display: none; /* hide logo anchor text */
+}
+
+header div.hero {
+    position: absolute;
+    width: 42%;
+    top: 130px;
+    left: 55%;
+}
+
+header div.hero h1 {
+    line-height: 1em;
+    margin: 0 0 30px 0;
+    color: #fff;
+}
